work in progress dynamic layout issue #1

--- a/css/layout.css
+++ b/css/layout.css
@@ -6,16 +6,22 @@
   max-width: 575px;
   margin: 0 auto;
   padding: 0 1.5rem;
+  border: 1px solid red;
+  background-color: f0f0f0;
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
+  border: 1px solid red;
 }
 
 .column-full,
 .column-half {
-  width: 100%;
+  /* width: 100%; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 100%;
 }
 
 .header {
@@ -27,28 +33,72 @@
   font-family: 'Proza Libre', sans-serif;
   font-size: 20px;
   font-weight: 400;
-  line-height: 27.3px;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   border: 1px solid red;
+  line-height: 40.72px;
+  vertical-align: center;
+}
+
+input,
+textarea {
+  /* display: block; */
+  width: 100%;
+  padding: 10px;
+  border-radius: 7px;
+  box-shadow: none;
+}
+
+image {
+  padding: 1.5rem;
+  height: 100vh;
+  flex-basis: 100%;
+}
+
+.form-title {
+  font-family: 'Proza Libre', sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 40.72px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+h1 {
+  font-family: 'Proza Libre', sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 40.72px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 }
 
 @media screen and (width >= 768px) {
   .container {
-    max-width: 900px;
+    max-width: 100%;
   }
 
   .header {
-    max-width: 1440px;
+    max-width: 100%;
   }
 
   .column-full,
   .column-half {
     padding: 0 0.75rem;
+    align-items: left;
+    justify-content: left;
+  }
+
+  .column-full {
+    width: 100%;
+    flex-basis: 100%;
   }
 
   .column-half {
     width: 50%;
+    flex-basis: 50%;
   }
 }
